# github-copilot-app-template

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
common/: dependencies.py  github.py
endpoints/: agent.py  skillsets.py
models/: github_app_request.py
services/: agent_services.py
